# noon

./: 1.0.0-rc  Cargo.toml  README.md
examples/: Cargo.toml  easing.rs  hello_world.rs  large_text.rs  morph.rs  morph_text.rs  shapes.rs  temp.rs  text_transform.rs
noon/: Cargo.toml
noon/src/: component.rs  consts.rs  ease.rs  geom.rs  lib.rs  scene.rs  system.rs
noon/src/animation/: builder.rs  color.rs  group.rs  mod.rs  path.rs  spatial.rs
noon/src/object/: circle.rs  empty.rs  line.rs  mod.rs  rectangle.rs  text.rs
noon/src/path/: mod.rs
src/: animation.rs  app.rs  color.rs  component.rs  consts.rs  main.rs  path.rs  scene.rs  system.rs
src/animation/: builder.rs  color.rs  mod.rs  path.rs  spatial.rs
src/object/: circle.rs  line.rs  mod.rs  rectangle.rs  text.rs
src/path/: mod.rs  resample.rs
