[package]
name = "ecs"
version = "0.1.0"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16"
generational-arena="0.2"
legion="0.3"
lazy_static="1.4.0"
uuid="0.8"
