[package]
name = "examples"
version = "0.1.0"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
edition = "2021"
description = "A set examples for Noon"
license = "MIT"


[dependencies]
noon = {version="0.1", path="../noon"}

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "morph"
path = "morph.rs"

[[example]]
name = "morph_text"
path = "morph_text.rs"

[[example]]
name = "shapes"
path = "shapes.rs"

[[example]]
name = "easing"
path = "easing.rs"

[[example]]
name = "temp"
path = "temp.rs"

[[example]]
name = "large_text"
path = "large_text.rs"