[package]
name = "noon"
version = "0.1.0"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs="0.6"
# nannou = { path = "../../nannou/nannou", version = "0.18"}
nannou = { git = "https://github.com/yongkyuns/nannou.git", version = "0.18"}
# nannou="0.18"
cgmath = { version = "0.17", features = ["serde"] }
pennereq = "0.3"

[dev-dependencies]
